# R2Share

./: .gitignore  Cargo.toml  README.ja.md  README.md  r2share.toml.example
.github/workflows/: ci.yml  release.yml
src/: main.rs
