[package]
name = "R2Share"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arboard = "3"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = { version = "1", features = ["http-body-1-x"] }
chrono = "0.4"
http-body-util = "0.1"
indicatif = "0.18"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
ulid = "1"
